--- a/leisure/src/main/resources/templates/fragmento/cadastro.html
+++ b/leisure/src/main/resources/templates/fragmento/cadastro.html
@@ -34,7 +34,7 @@
             </div>
             <div class="col-md-6">
               <label for="inputPassword4" class="form-label">Repetir senha</label>
-              <input type="password" class="form-control" id="inputPassword4" name="senha">
+              <input type="password" class="form-control" id="inputPassword4">
             </div>
             <div class="col-md-3">
               <label>Cep: <input class="form-control" name="cep" type="text" id="cep" value="" maxlength="9" onblur="pesquisacep(this.value);" /></label><br />
