--- a/leisure/src/main/resources/templates/fragmento/head.html
+++ b/leisure/src/main/resources/templates/fragmento/head.html
@@ -1,7 +1,7 @@
 <head th:fragment="head">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leisuri Imóveis</title>
+  <title>Leisure Imóveis</title>
   <link rel="icon" type="image/x-icon" href="/imagem/leisuriLogo.png">
 
   <!-- BOOTSTRAP CSS -->
