--- a/leisure/src/main/resources/templates/fragmento/profileMenu.html
+++ b/leisure/src/main/resources/templates/fragmento/profileMenu.html
@@ -30,7 +30,7 @@
                 </a>
               </li>
               <li>
-                <a href="Index.html" class="pointer nav-link link-body-emphasis d-flex font-light px-0" onclick="sair()"> <!--FAZER A FUNÇÃO DE LOGOUT -->
+                <a th:href="@{/usuario/logout}" class="pointer nav-link link-body-emphasis d-flex font-light px-0"> <!--FAZER A FUNÇÃO DE LOGOUT -->
                   <i class="fa-thin fa-right-from-bracket d-flex align-items-center me-2"></i>Sair
                 </a>
               </li>
