--- a/leisure/src/main/resources/templates/fragmento/barraPesquisa.html
+++ b/leisure/src/main/resources/templates/fragmento/barraPesquisa.html
@@ -17,6 +17,14 @@
   <div class="gap-2 d-md-flex">
     <a th:href="@{/leisure/index}"><i class="fa-thin fa-house-blank fa-2xl position-absolute home-page font-light"></i></a>
   </div>
+  
+  <div class="gap-2 d-md-flex justify-content-md-end">
+	<div th:if="${user} == null">
+	<p>batata doce</p>
+  </div>
+  <div th:unless="${user} == null"><p>Arroz</p> </div>
+</div>
+  
   <div class="gap-2 d-md-flex justify-content-md-end">
     <button class="btn btn-info rounded-5 login-register position-absolute end-0" data-bs-target="#exampleModalToggle"
       data-bs-toggle="modal"><i class="fa-thin fa-user"></i>Login</button>
@@ -48,7 +56,7 @@
     <div class="dropdown">
       <a href="#" class="font-light d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
         data-bs-toggle="dropdown" aria-expanded="false">
-        <img th:src="@{/imagem/Marcelo.jpg}" alt="" width="32" height="32" class="rounded-circle me-2">
+        <img th:src="@{/usuario/imagem/{id} (id=${usuario.id})}" alt="" width="32" height="32" class="rounded-circle me-2">
         <strong class="font-light">Meu perfil</strong>
       </a>
       <ul class="hoverMenu dropdown-menu bg-light text-small shadow mt-2">
